--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-screens": "^3.1.1",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-navigation": "^4.4.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0"
   },
