--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.4",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-appearance": "^0.3.4",
     "react-native-dev-menu": "^4.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.2.0",
